# cortex

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  rustvani_agents.md  rustvani_architecture.md
assets/: tailwind.css
assets/styling/: main.css
memory/: MEMORY.md  project_cortex.md
src/: db.rs  main.rs  pipeline.rs
src/components/: echo.rs  hero.rs  layout.rs  mic.rs  mod.rs  sidebar.rs  stat_card.rs
src/components/mic/: capture.rs  client.rs  hook.rs  mod.rs  playback.rs  ravi.rs  types.rs  vad.rs
src/models/: client.rs  mod.rs  property.rs  stats.rs
src/views/: clients.rs  dashboard.rs  matches.rs  mod.rs  properties.rs  settings.rs  voice.rs
